# ai_sop_toolkit

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
ai_sop_toolkit/: cli.py
ai_sop_toolkit/templates/: claude_md.tpl  cursorrules.tpl  project_rules_tpl.md  task_md.tpl
tests/: test_cli.py
