[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_sop_toolkit"
version = "1.3.0"
description = "A CLI toolkit for bootstrapping an AI Agent Team development SOP."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Wang Peiquan" }
]
dependencies = [
  "click"
]
keywords = ["cli", "template", "ai", "workflow", "sop"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console"
]

[project.urls]
Homepage = "https://github.com/perry121108-dotcom/ai_agent_sop_toolkit"
Repository = "https://github.com/perry121108-dotcom/ai_agent_sop_toolkit"

[project.scripts]
ai-sop = "ai_sop_toolkit.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ai_sop_toolkit = ["templates/*.tpl", "templates/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
